--- a/Fav.html
+++ b/Fav.html
@@ -71,7 +71,7 @@
     <table id="tbl"></table>
 </body>
 <script>
-        var arr=JSON.parse(localStorage.getItem("Favourites"))
+        var arr=JSON.parse(localStorage.getItem("favourites"))
     console.log(arr)
 
     var table=document.querySelector("#tbl")
